--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://ibm-hackathon-support.github.io/"
 languageCode = "en-us"
 title = "Hackathon Support"
 theme = "ibm-plexus-simple"
