--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "ibm-plexus-simple"
   AuthorName = "Michael Wellner"
   GitHubUser = "cokeSchlumpf"
   Brand = "IBM"
-  Subtitle = "Resources vor #CodeVsCovid19 Hackathon"
+  Subtitle = "Resources for #CodeVsCovid19 Hackathon"
 
 [blackfriday] 
     extensions = ["hardLineBreak"]
